Use surefire.useModulePath = false for testing, tidy dependencies