@@ -12,6 +12,7 @@
   <properties>
     <javadoc.source>11</javadoc.source>
     <java.release>11</java.release>
+    <surefire.useModulePath>false</surefire.useModulePath>
   </properties>
 
   <dependencies>
@@ -22,22 +23,14 @@
       <version>2.2-SNAPSHOT</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.2.2</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>
-            --add-modules com.fasterxml.jackson.databind
-            --add-opens io.avaje.jex.jdk/io.avaje.jex.jdk=com.fasterxml.jackson.databind
-            --add-opens io.avaje.jex.jdk/io.avaje.jex.jdk=ALL-UNNAMED
-          </argLine>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
